<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_50dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/size_10dp"
            android:text="@string/tim_hieu_ve_ha_noi"
            android:textColor="@color/colorLightGreen"
            android:textSize="@dimen/size_24sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <TextView
        android:id="@+id/txt_gioi_thieu_tong_quan_ve_ha_noi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:layout_margin="@dimen/size_10dp"
        android:text="@string/gioi_thieu"/>
    <TextView
        android:id="@+id/txt_xem_them_red"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorRed"
        android:layout_gravity="end"
        android:layout_marginRight="@dimen/size_8dp"
        android:text="@string/xem_them"/>


    <android.support.v7.widget.RecyclerView
        android:id="@+id/rcv_tim_hieu_ve_ha_noi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/size_10dp">
    </android.support.v7.widget.RecyclerView>


    <TextView
        android:id="@+id/txt_xem_them_black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/size_10dp"
        android:text="@string/xem_them"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/size_24sp"
        android:textStyle="bold" />

</LinearLayout>