<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_50dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/size_10dp"
            android:text="@string/goi_y_cho_ban"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/size_24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_xem_tat_ca_goi_y"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/size_10dp"
            android:text="@string/xem_tat_ca" />
    </RelativeLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rcv_goi_y"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></android.support.v7.widget.RecyclerView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_50dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/size_10dp"
            android:text="@string/khach_san"
            android:textColor="@color/colorOrange"
            android:textSize="@dimen/size_24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_xem_tat_ca_khach_san"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/size_10dp"
            android:text="@string/xem_tat_ca" />
    </RelativeLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rcv_khạch_san"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></android.support.v7.widget.RecyclerView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_50dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/size_10dp"
            android:text="@string/mua_sam"
            android:textColor="@color/colorRed"
            android:textSize="@dimen/size_24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_xem_tat_ca_mua_sam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/size_10dp"
            android:text="@string/xem_tat_ca" />
    </RelativeLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rcv_mua_sam"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></android.support.v7.widget.RecyclerView>

    <include layout="@layout/layout_tim_hieu_ha_noi"></include>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_50dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/size_10dp"
            android:text="@string/thoi_tiet"
            android:textColor="@color/colorLightBlue"
            android:textSize="@dimen/size_24sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rcv_thoi_tiet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></android.support.v7.widget.RecyclerView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorWhite"></LinearLayout>


</LinearLayout>
