<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/size_8dp"
            android:layout_marginRight="@dimen/size_8dp"
            android:orientation="vertical"
            android:visibility="visible">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:weightSum="10">

                <ImageView
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_weight="1"
                    android:src="@drawable/theloai" />

                <TextView
                    android:id="@+id/txt_the_loai"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="9"
                    android:gravity="center_vertical"
                    android:text="Ăn trưa, ăn tối, ăn sáng, ăn linh tinh, ăn cả ngày, ăn hết tất cả, ăn không còn gì" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorGray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:weightSum="10">

                <ImageView
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_weight="1"
                    android:src="@drawable/like" />

                <RatingBar
                    android:id="@+id/rate_bar_detail"
                    style="?android:attr/ratingBarStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/size_10dp"
                    android:gravity="center"
                    android:isIndicator="false"
                    android:numStars="5"
                    android:rating="4.5"
                    android:stepSize="0.5"
                    android:transformPivotX="0dp"></RatingBar>

                <TextView
                    android:id="@+id/txt_sl_danh_gia_detail"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:gravity="center"
                    android:text="4 Đánh giá" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorGray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:weightSum="10">

                <ImageView
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_weight="1"
                    android:src="@drawable/web" />

                <TextView
                    android:id="@+id/txt_trang_web"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="9"
                    android:autoLink="web"
                    android:gravity="center_vertical"
                    android:text="https://google.com.vn"></TextView>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorGray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:weightSum="10">

                <ImageView
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_weight="1"
                    android:src="@drawable/mail" />

                <TextView
                    android:id="@+id/txt_email"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="9"
                    android:autoLink="email"
                    android:gravity="center_vertical"
                    android:text="duongthecuongbk227@gmail.com"></TextView>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorGray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:weightSum="10">

                <ImageView
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_weight="1"
                    android:src="@drawable/location" />

                <TextView
                    android:id="@+id/txt_dia_chi"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="9"
                    android:gravity="center_vertical"
                    android:text="Số 1B ngách 53 ngõ Trại Cá, Trương Định, Hai Bà Trưng, Hà Nội." />
            </LinearLayout>

            <fragment
                android:id="@+id/map"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="300dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginLeft="@dimen/size_8dp"
            android:layout_marginRight="@dimen/size_8dp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/tong_quan"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/size_24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txt_xem_them_activity_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:text="@string/xem_them"
                    android:textColor="@color/colorRed" />
            </RelativeLayout>

            <TextView
                android:id="@+id/txt_tong_quan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_10dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="Giờ mở của" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorGray" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/size_8dp"
            android:text="@string/danh_gia"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/size_24sp"
            android:textStyle="bold" />

        <ListView
            android:id="@+id/list_danh_gia"
            android:layout_width="match_parent"
            android:layout_height="187dp"></ListView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorGray" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/size_8dp"
            android:text="@string/anh_dep"
            android:textColor="@color/colorLightBlue"
            android:textSize="@dimen/size_24sp"
            android:textStyle="bold" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rcv_anh_dep"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </android.support.v7.widget.RecyclerView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorGray" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/size_8dp"
            android:text="@string/dia_diem_gan_day"
            android:textColor="@color/colorOrange"
            android:textSize="@dimen/size_24sp"
            android:textStyle="bold" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rcv_dia_diem_gan_day"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </android.support.v7.widget.RecyclerView>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>